fix alignment of first paragraph, change the orange color a bit and add text shadow

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -2,10 +2,12 @@
 
 :root {
   --main-bg-gradient: linear-gradient(90deg, #FAFAFA 27.34375%, #C5D0D9 70.3125%);
+  --bg-main: var(--white);
+  --white: #FAFAFA;
 }
 
-.bg-main-gradient {
-  background: var(--main-bg-gradient);
+.bg-man {
+  background: var(--bg-main);
 }
 
 /* RTL support */
